--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author-email = jp@jamezpolley.com
 summary = For managing that one annoying remote file you can't put under version control
 description-file = README.rst
 license = Apache-2
-url = https://pypi.python.org/pypi/fuggit
+url = https://github.com/jamezpolley/fuggit
 classifier =
     Development Status :: 4 - Beta
     Environment :: Console
